control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-disallowed-kind.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tlsroutes-only
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: disallowed-kind
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: tlsroutes-only
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
